--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -1,6 +1,19 @@
-@import url('/fr/page1.html');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap');
+
+@import url(Variables.css);
+
+    body {
+        max-width: 100%;
+        height: 5746px;
+    }
+
+    header {
+        width: 100%;
+        height: 35px;
+        background-color: var(--rouge);
+    }
 
 
-div {
-    background-color:rgb(16, 184, 184)a;
-}
