--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -6,14 +6,105 @@
 @import url(Variables.css);
 
     body {
-        max-width: 100%;
+        width: 100%;
         height: 5746px;
+        background-color: var(--beige);
     }
 
     header {
         width: 100%;
         height: 35px;
         background-color: var(--rouge);
+        z-index: 1001   ;
     }
 
+    .landing div p {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        top: 6px;
+        z-index: 1000;
+        color: var(--blanc);
+    }
 
+    .landing .head {
+        position: absolute;
+        width: 100%;
+        height: 229px;
+        top: 37px;
+       }
+
+    .landing h1 {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        top: 127px;
+        z-index: 1000;
+        color: var(--blanc);
+    }
+
+    .intro {
+        position: relative;
+        width: 339px;
+        height: 345px;
+        top: 358px; 
+        border-radius: 21px;
+        background-color: var(--marron);
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 24px;
+        padding-top: 24px;
+        margin: auto;
+    }
+
+    .illustration {
+        position: relative;
+        width: 100%;
+        height: 292px;
+        top: 771px;
+
+    }
+
+    section h1 {
+        position: relative;
+        width: 307px;
+        top: 1137px;
+        margin: auto;
+    }
+
+    .article1 {
+        position: absolute;
+        width: 329px;
+        height: 674px;
+        top: 1259px;
+        left: 30px;
+        background-color: var(--marron);
+    }
+
+    .article1 h2 {
+        width: 268px;
+        top: 1274px;
+        margin: auto;
+    }
+
+    .article1 img {
+        position: relative;
+        width: 295px;
+        height: 121px;
+        display: flex;
+        margin: auto;
+        padding-top: 43px;
+        padding-bottom: 43px;
+        z-index: 2;
+    }
+
+    .rectanlge1 {
+        position: absolute;
+        width: 306px;
+        height: 183px;
+        top: 1313px;
+        display: flex;
+        margin: auto;
+        background-color: black;
+        z-index: 1;
+    }
