--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -12,7 +12,7 @@
     }
 
     header {
-        width: 100%;
+        width: 10000px;
         height: 35px;
         background-color: var(--rouge);
         z-index: 1001;
