css page 1 final

--- a/src/css/Variables.css
+++ b/src/css/Variables.css
@@ -5,4 +5,5 @@
     --marron: rgba(115, 104, 65, 1);
     --noir: rgba(0, 0, 0, 1);
     --blanc: rgba(250, 250, 250, 1);
+    --gris: rgb(83, 83, 83);
 }
