--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -18,13 +18,103 @@
         z-index: 1001;
     }
 
+    .apropos {
+        position: absolute;
+        display: flex;
+        left: 100px;
+        margin-top: -35px;
+        z-index: 1;
+        color: var(--blanc);
+    }
+
+    .glossaire {
+        position: absolute;
+        display: flex;
+        left: 225px;
+        margin-top: -35px;
+        z-index: 10;
+        color: var(--blanc);
+    }
+
+    .open-closed {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 20px;
+        left: 350px;
+      }
+      
+      .menu-open {
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        left: 85%;
+      }
+
+      .menu {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 1);
+        opacity: 0.92;
+        z-index: 1000;
+        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+      }
+      
+      .menu ul {
+        list-style: none;
+        padding: 0;
+        margin: 25% 0 0 0;
+        text-align: center;
+      }
+      .menu ul li {
+        margin-bottom: 20px;
+      }
+      .menu ul li a {
+        color: white;
+        font-size: 24px;
+        text-decoration: none;
+        transition: color 0.3s ease-in-out;
+      }
+      .menu ul li a:hover {
+        color: var(--marron); 
+      }
+      .menu[x-show] {
+        display: block;
+      }
+      .noscroll {
+        overflow: hidden;
+      }
+    
+      .close-icon {
+        position: absolute;
+        cursor: pointer;
+        z-index: 1100;
+        top: 20px;
+        left: 85%;
+    }
+    
+    .close-icon img {
+        width: 30px;
+        height: 30px;
+    }
+
     header img {
         position: relative;
         width: 55px;
         height: 55px;
         display: flex;
-        margin: aut;
     }
+
+    .landing div {
+        position: absolute;
+        width: 100%;
+        height: 229px;
+        top: 55px;
+        background-color: black;
+        opacity: 0.7;
+       }
 
     .landing div p {
         position: relative;
@@ -46,7 +136,7 @@
         position: relative;
         display: flex;
         justify-content: center;
-        top: 127px;
+        top: 50px;
         z-index: 1000;
         color: var(--blanc);
     }
@@ -63,7 +153,7 @@
         padding-top: 24px;
         display: flex;
         margin: auto;
-        margin-top: 200px;
+        margin-top: 297px;
     }
 
     .illustration {
