--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -12,6 +12,8 @@
     }
 
     header {
+        position: fixed;
+        top: 0px;
         width: 100%;
         height: 55px;
         background-color: var(--rouge);
