--- a/src/css/style6.css
+++ b/src/css/style6.css
@@ -154,7 +154,7 @@
 
     .article h1 {
         width: 307px;
-        height: 93px;
+        height: 63px;
         margin: auto;
         text-align: center;
         padding-top: 70px;
@@ -166,8 +166,8 @@
     }
 
     .chapeau {
+        padding-top: 10px;
         position: relative;
-        padding-top: 18px;
         height: 101px;
         width: 310px;
         margin: auto;
@@ -176,4 +176,521 @@
         font-weight: 300;
         color: white;
         line-height: 17.6px;
+    }
+
+    .part1 img {
+        position: relative;
+        width: 308px;
+        height: 172px;
+        padding-top: 21px;
+        display: flex;
+        margin: auto;
+    }
+
+    .part1 p {
+        position: relative;
+        width: 307px;
+        height: 152px;
+        font-family: "Mulish";
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 20.8px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 11px;
+    }
+
+    .part2 h2 {
+        position: relative;
+        width: 278px;
+        height: 30px;
+        font-family: 'Mulish';
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 10px;
+    }
+
+    .part2 img {
+        position: relative;
+        width: 149px;
+        height: 239px;
+        padding-left: 9px;
+    }
+
+    .part2 p {
+        position: absolute;
+        width: 153px;
+        height: 266px;
+        top: 660px;
+        left: 175px;
+        color: white;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+    }
+
+    .part3 h2 {
+        position: relative;
+        width: 278px;
+        height: 30px;
+        font-family: 'Mulish';
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 10px;
+    }
+
+    .part3 img {
+        position: relative;
+        width: 149px;
+        height: 239px;
+        padding-left: 9px;
+    }
+
+    .part3 p {
+        position: absolute;
+        width: 153px;
+        height: 266px;
+        top: 980px;
+        left: 175px;
+        color: white;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+    }
+
+
+    .part4 h2 {
+        position: relative;
+        width: 278px;
+        height: 30px;
+        font-family: 'Mulish';
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 10px;
+    }
+
+    .part4 img {
+        position: relative;
+        width: 149px;
+        height: 239px;
+        padding-left: 9px;
+    }
+
+    .part4 p {
+        position: absolute;
+        width: 153px;
+        height: 266px;
+        top: 1290px;
+        left: 175px;
+        color: white;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+    }
+
+
+    .part5 h2 {
+        position: relative;
+        width: 278px;
+        height: 30px;
+        font-family: 'Mulish';
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 10px;
+    }
+
+    .part5 img {
+        position: relative;
+        width: 149px;
+        height: 239px;
+        padding-left: 9px;
+    }
+
+    .part5 p {
+        position: absolute;
+        width: 153px;
+        height: 345px;
+        top: 1580px;
+        left: 175px;
+        color: white;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+    }
+
+    .part6 h2 {
+        position: relative;
+        width: 307px;
+        height: 28px;
+        font-family: 'Mulish';
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 80px;
+    }
+
+    .part6 img {
+        position: relative;
+        width: 307px;
+        height: 173px;
+        padding-top: 10px;
+        display: flex;
+        margin: auto;
+    }
+
+    .part6 p {
+        position: relative;
+        width: 308px;
+        height: 128px;
+        font-family: "Mulish";
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 20.8px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 21px;
+    }
+
+    .part6 .p2 {
+        position: relative;
+        width: 308px;
+        height: 128px;
+        font-family: "Mulish";
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 20.8px;
+        color: white;
+        padding-left: 11px;
+        padding-top: 21px;
+    }
+
+    .article_associé h1 {
+        position: relative;
+        width: 331px;
+        height: 51px;
+        top: 625px;
+        margin: auto;
+        font-family: "EB Garamond";
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    .article_associé div {
+        position: relative;
+        width: 329px;
+        height: 411px;
+        background-color: var(--marron);
+        top: 634px;
+        margin: auto;
+    }
+
+    .article_associé h2 {
+        position: relative;
+        width: 301px;
+        height: 54px;
+        padding-left: 11px;
+        padding-top: 12px;
+        font-family: 'EB Garamond';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: white;
+    }
+
+    .article_associé img {
+        position: relative;
+        width: 302px;
+        height: 196px;
+        display: flex;
+        margin: auto;
+    }
+
+    .article_associé p {
+        position: relative;
+        width: 293px;
+        height: 60px;
+        padding-left: 11px;
+        padding-top: 3px;
+        font-family: 'Mulish';
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        color: white;        
+    }
+
+    .autre_article h1 {
+        position: absolute;
+        width: 331px;
+        height: 51px;
+        top: 3895px;
+        left: 12%;
+        font-family: EB Garamond;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    .aa1 {
+        position: relative;
+        width: 329px;
+        height: 441px;
+        top: 860px;
+        background-color: var(--marron);
+        margin: auto;
+    }
+
+    .aa1 h2 {
+        position: relative;
+        width: 306px;
+        height: 60px;
+        padding-left: 11px;
+        padding-top: 10px;
+        font-family: EB Garamond;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: white;
+    }
+
+    .aa1 img {
+        position: relative;
+        width: 295px;
+        height: 121px;
+        padding-top: 20px;
+        display: flex;
+        margin: auto;
+    }
+
+    .aa1 p {
+        position: relative;
+        width: 296px;
+        height: 60px;
+        padding-left: 11px;
+        padding-top: 30px;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;    
+        color: white;    
+    }
+
+    .aa2 {
+        position: relative;
+        width: 329px;
+        height: 441px;
+        top: 958px;
+        background-color: var(--marron);
+        margin: auto;
+    }
+
+    .aa2 h2 {
+        position: relative;
+        width: 306px;
+        height: 60px;
+        padding-left: 11px;
+        padding-top: 10px;
+        font-family: EB Garamond;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: white;
+    }
+
+    .aa2 img {
+        position: relative;
+        width: 295px;
+        height: 173px;
+        display: flex;
+        margin: auto;
+    }
+
+    .aa2 p {
+        position: relative;
+        width: 296px;
+        height: 91px;
+        padding-left: 11px;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;    
+        color: white;    
+    }
+
+    .aa3 {
+        position: relative;
+        width: 329px;
+        height: 441px;
+        top: 1054px;
+        background-color: var(--marron);
+        margin: auto;
+    }
+
+    .aa3 h2 {
+        position: relative;
+        width: 306px;
+        height: 60px;
+        padding-left: 11px;
+        padding-top: 10px;
+        font-family: EB Garamond;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: white;
+    }
+
+    .aa3 img {
+        position: relative;
+        width: 300px;
+        height: 176px;
+        padding-top: 20px;
+        display: flex;
+        margin: auto;
+    }
+
+    .aa3 p {
+        position: relative;
+        width: 293px;
+        height: 51px;
+        padding-left: 11px;
+        padding-top: 10px;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;    
+        color: white;    
+    }
+
+    .aa4 {
+        position: relative;
+        width: 329px;
+        height: 441px;
+        top: 1152px;
+        background-color: var(--marron);
+        margin: auto;
+    }
+
+    .aa4 h2 {
+        position: relative;
+        width: 306px;
+        height: 60px;
+        padding-left: 11px;
+        padding-top: 10px;
+        font-family: EB Garamond;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
+        color: white;
+    }
+
+    .aa4 img {
+        position: relative;
+        width: 300px;
+        height: 176px;
+        padding-top: 10px;
+        display: flex;
+        margin: auto;
+    }
+
+    .aa4 p {
+        position: relative;
+        width: 293px;
+        height: 51px;
+        padding-left: 11px;
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;    
+        color: white;    
+    }
+
+    footer {
+        position: absolute;
+        width: 100%;
+        height: 439px;
+        top: 6250px;
+        background-color: var(--noir);
+    }
+
+    footer .menu {
+        position: relative;
+        height: 18px;
+        top: 90px;
+        margin-left: 33px;
+        color: var(--gris);
+    }
+
+    .suivre {
+        position: absolute;
+        height: 18px;
+        top: 330px;
+        margin-left: 33px;
+        color: var(--gris);
+    }
+
+    .logofooter {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        top: 30px;
+        left: 30px;
+    }
+
+    .social-icons {
+        position: absolute;
+        top: 370px;
+        left: 33px;
+    }
+
+    .articleli li {
+        position: relative;
+        top: 85px;
+        padding: 5px;
+        color: var(--blanc);
+        list-style: none;
+    }
+
+    .utils li {
+        position: relative;
+        top: 80px;
+        float: left;
+        padding: 10px;
+        list-style: none;
+    }
+
+    li a {
+        text-decoration: none;
+        color: var(--blanc);    
     }
