--- a/src/css/style5.css
+++ b/src/css/style5.css
@@ -657,3 +657,8 @@
         text-decoration: none;
         color: var(--blanc);    
     }
+
+    header a {
+        text-decoration: none;
+        color: var(--blanc);    
+    }
