--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -451,3 +451,198 @@
         text-decoration: none;
         color: var(--blanc);    
     }
+
+    .partage1 img {
+        width: 24px;
+        height: 24px;
+        margin-top: -32px;
+    }
+
+    .partage1 {
+        position: relative;
+        width: 50px;
+        height: 50px;
+        background-color: var(--marron);
+        border: 2px solid;
+        border-color: var(--beige);
+        display: flex;
+        margin: auto;
+        top: 185px;
+    }
+
+    .partage2 img {
+        width: 24px;
+        height: 24px;
+        margin-top: -32px;
+    }
+
+    .partage2 {
+        position: relative;
+        width: 50px;
+        height: 50px;
+        background-color: var(--marron);
+        border: 2px solid;
+        border-color: var(--beige);
+        display: flex;
+        margin: auto;
+        top: 70px;
+    }
+
+    .partage3 img {
+        width: 24px;
+        height: 24px;
+        margin-top: -32px;
+    }
+
+    .partage3 {
+        position: relative;
+        width: 50px;
+        height: 50px;
+        background-color: var(--marron);
+        border: 2px solid;
+        border-color: var(--beige);
+        display: flex;
+        margin: auto;
+        top: 52px;
+    }
+
+    .partage4 img {
+        width: 24px;
+        height: 24px;
+        margin-top: -32px;
+    }
+
+    .partage4 {
+        position: relative;
+        width: 50px;
+        height: 50px;
+        background-color: var(--marron);
+        border: 2px solid;
+        border-color: var(--beige);
+        display: flex;
+        margin: auto;
+        top: 95px;
+    }
+
+    .partage5 img {
+        width: 24px;
+        height: 24px;
+        margin-top: -32px;
+    }
+
+    .partage5 {
+        position: relative;
+        width: 50px;
+        height: 50px;
+        background-color: var(--marron);
+        border: 2px solid;
+        border-color: var(--beige);
+        display: flex;
+        margin: auto;
+        top: 62px;
+    }
+
+    .vplus1 {
+        position: absolute;
+        width: 112px;
+        height: 50px;
+        background-color: var(--marron);
+        border-color: var(--beige);
+        left: 205px;
+        top: 646px;
+    }
+
+    .vplus1 a {
+        text-decoration: none;
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: white;
+    }
+
+    .vplus2 {
+        position: absolute;
+        width: 112px;
+        height: 50px;
+        background-color: var(--marron);
+        border-color: var(--beige);
+        left: 205px;
+        top: 657px;
+    }
+
+    .vplus2 a {
+        text-decoration: none;
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: white;
+    }
+
+    .vplus3 {
+        position: absolute;
+        width: 112px;
+        height: 50px;
+        background-color: var(--marron);
+        border-color: var(--beige);
+        left: 205px;
+        top: 676px;
+    }
+
+    .vplus3 a {
+        text-decoration: none;
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: white;
+    }
+
+    .vplus4 {
+        position: absolute;
+        width: 112px;
+        height: 50px;
+        background-color: var(--marron);
+        border-color: var(--beige);
+        left: 205px;
+        top: 677px;
+    }
+
+    .vplus4 a {
+        text-decoration: none;
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: white;
+    }
+
+    .vplus5 {
+        position: absolute;
+        width: 112px;
+        height: 50px;
+        background-color: var(--marron);
+        border-color: var(--beige);
+        left: 205px;
+        top: 677px;
+    }
+
+    .vplus5 a {
+        text-decoration: none;
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: center;
+        color: white;
+    }
