--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -641,3 +641,33 @@
         text-align: center;
         color: white;
     }
+
+    h2 {
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: white;
+    }
+
+    p {
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: white;
+    }
+
+    h1 {
+        font-family: EB Garamond;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 40px;
+        letter-spacing: 0em;
+        text-align: center;
+        
+    }
