--- a/src/css/stlyle2.css
+++ b/src/css/stlyle2.css
@@ -630,3 +630,12 @@
         text-decoration: none;
         color: var(--blanc);    
     }
+    h1 {
+        font-family: EB Garamond;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 40px;
+        letter-spacing: 0em;
+        text-align: center;
+        
+    }
