--- a/src/css/style6.css
+++ b/src/css/style6.css
@@ -699,3 +699,13 @@
         text-decoration: none;
         color: var(--blanc);    
     }
+
+    h1 {
+        font-family: EB Garamond;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 40px;
+        letter-spacing: 0em;
+        text-align: center;
+        
+    }
