--- a/src/css/stlye.css
+++ b/src/css/stlye.css
@@ -77,14 +77,15 @@
         list-style: none;
         padding: 0;
         margin: 25% 0 0 0;
-        text-align: center;
+        text-align: left;
+        padding-left: 25px;
       }
       .menu ul li {
         margin-bottom: 20px;
       }
       .menu ul li a {
         color: white;
-        font-size: 24px;
+        font-size: 13px;
         text-decoration: none;
         transition: color 0.3s ease-in-out;
       }
@@ -669,5 +670,13 @@
         line-height: 40px;
         letter-spacing: 0em;
         text-align: center;
-        
+    }
+
+    a {
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: left;    
     }
