--- a/src/css/style3.css
+++ b/src/css/style3.css
@@ -6,7 +6,7 @@
 @import url(Variables.css);
 
     body {
-        height: 6550px;
+        height: 5300px;
         background-color: var(--beige);
         margin: 0px;
     }
@@ -21,6 +21,10 @@
     }
 
     header a {
+        text-decoration: none;
+        color: var(--blanc);    
+    }
+    .headtxt a {
         text-decoration: none;
         color: var(--blanc);    
     }
@@ -73,14 +77,15 @@
         list-style: none;
         padding: 0;
         margin: 25% 0 0 0;
-        text-align: center;
+        text-align: left;
+        padding-left: 25px;
       }
       .menu ul li {
         margin-bottom: 20px;
       }
       .menu ul li a {
         color: white;
-        font-size: 24px;
+        font-size: 13px;
         text-decoration: none;
         transition: color 0.3s ease-in-out;
       }
@@ -688,4 +693,42 @@
         letter-spacing: 0em;
         text-align: center;
         
+    }
+
+    h2 {
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: white;
+    }
+
+    p {
+        font-family: Mulish;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: white;
+    }
+
+    h1 {
+        font-family: EB Garamond;
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 40px;
+        letter-spacing: 0em;
+        text-align: center;
+    }
+
+    a {
+        font-family: Mulish;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: 18px;
+        letter-spacing: 0.1em;
+        text-align: left;    
     }
