--- a/src/css/apropos.css
+++ b/src/css/apropos.css
@@ -6,7 +6,7 @@
 @import url(Variables.css);
 
     body {
-        height: 1500px;
+        height: 1400px;
         background-color: var(--beige);
         margin: 0px;
     }
@@ -152,23 +152,27 @@
         color: var(--blanc);
     }
 
-    .glo {
+    .article {
         position: relative;
-        margin-left: 11px;
-        margin-top: 400px;
+        width: 338px;
+        height: 813px;
+        top: 384px;
+        margin: auto;
+        background-color: var(--marron);
+        padding-top: 25px;
+        padding-left: 11px;
     }
 
-    .glo p {
-        width: 370px;
-        height: 100px;
-        padding-top: 25px;
+    .article h2 {
+        padding-bottom: 20px;
+        padding-top: 20px;
     }
 
     footer {
         position: absolute;
         width: 100%;
         height: 439px;
-        top: 1600px;
+        top: 1400px;
         background-color: var(--noir);
     }
 
@@ -225,8 +229,8 @@
 
     h2 {
         font-family: Mulish;
-        font-size: 13px;
-        font-weight: 300;
+        font-size: 18px;
+        font-weight: 700;
         line-height: 21px;
         letter-spacing: 0em;
         text-align: left;
