--- a/src/css/autrepro.css
+++ b/src/css/autrepro.css
@@ -6,7 +6,7 @@
 @import url(Variables.css);
 
     body {
-        height: 3200px;
+        height: 5300px;
         background-color: var(--beige);
         margin: 0px;
     }
@@ -77,14 +77,15 @@
         list-style: none;
         padding: 0;
         margin: 25% 0 0 0;
-        text-align: center;
+        text-align: left;
+        padding-left: 25px;
       }
       .menu ul li {
         margin-bottom: 20px;
       }
       .menu ul li a {
         color: white;
-        font-size: 24px;
+        font-size: 13px;
         text-decoration: none;
         transition: color 0.3s ease-in-out;
       }
